hf_referral changes

--- a/egov-persister/referral-management-persister.yml
+++ b/egov-persister/referral-management-persister.yml
@@ -156,3 +156,78 @@ serviceMaps:
             - jsonPath: $.*.rowVersion
             - jsonPath: $.*.isDeleted
             - jsonPath: $.*.id
+
+    - version: 1.0
+      description: Saves a hfreferral
+      fromTopic: save-hfreferral-topic
+      isTransaction: true
+      queryMaps:
+        - query: INSERT INTO health.hf_referral(id, clientReferenceId, tenantId, projectid, facilityid, symptom, symptomsurveyid, beneficiaryid, referralcode, nationallevelid, additionalDetails, createdBy, createdTime, lastModifiedBy, lastModifiedTime, clientCreatedBy, clientCreatedTime, clientLastModifiedBy, clientLastModifiedTime, rowVersion, isDeleted) VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+          basePath: $.*
+          jsonMaps:
+            - jsonPath: $.*.id
+            - jsonPath: $.*.clientReferenceId
+            - jsonPath: $.*.tenantId
+            - jsonPath: $.*.projectId
+            - jsonPath: $.*.facilityId
+            - jsonPath: $.*.symptom
+            - jsonPath: $.*.symptomSurveyId
+            - jsonPath: $.*.beneficiaryId
+            - jsonPath: $.*.referralCode
+            - jsonPath: $.*.nationalLevelId
+            - jsonPath: $.*.additionalFields
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.*.auditDetails.createdBy
+            - jsonPath: $.*.auditDetails.createdTime
+            - jsonPath: $.*.auditDetails.lastModifiedBy
+            - jsonPath: $.*.auditDetails.lastModifiedTime
+            - jsonPath: $.*.clientAuditDetails.createdBy
+            - jsonPath: $.*.clientAuditDetails.createdTime
+            - jsonPath: $.*.clientAuditDetails.lastModifiedBy
+            - jsonPath: $.*.clientAuditDetails.lastModifiedTime
+            - jsonPath: $.*.rowVersion
+            - jsonPath: $.*.isDeleted
+
+    - version: 1.0
+      description: Updates a hfreferral
+      fromTopic: update-hfreferral-topic
+      isTransaction: true
+      queryMaps:
+        - query: UPDATE health.hf_referral SET clientReferenceId = ?, tenantId = ?, projectid = ?, facilityid = ?, symptom = ?, symptomsurveyid = ?, beneficiaryid = ?, referralcode = ?, nationallevelid = ?, additionalDetails = ?, lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ? WHERE ID = ?;
+          basePath: $.*
+          jsonMaps:
+            - jsonPath: $.*.clientReferenceId
+            - jsonPath: $.*.tenantId
+            - jsonPath: $.*.projectId
+            - jsonPath: $.*.facilityId
+            - jsonPath: $.*.symptom
+            - jsonPath: $.*.symptomSurveyId
+            - jsonPath: $.*.beneficiaryId
+            - jsonPath: $.*.referralCode
+            - jsonPath: $.*.nationalLevelId
+            - jsonPath: $.*.additionalFields
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.*.auditDetails.lastModifiedBy
+            - jsonPath: $.*.auditDetails.lastModifiedTime
+            - jsonPath: $.*.clientAuditDetails.lastModifiedBy
+            - jsonPath: $.*.clientAuditDetails.lastModifiedTime
+            - jsonPath: $.*.rowVersion
+            - jsonPath: $.*.id
+
+    - version: 1.0
+      description: Deletes a hfreferral
+      fromTopic: delete-hfreferral-topic
+      isTransaction: true
+      queryMaps:
+        - query: UPDATE health.hf_referral SET lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ?, isDeleted = ? WHERE ID = ?;
+          basePath: $.*
+          jsonMaps:
+            - jsonPath: $.*.auditDetails.lastModifiedBy
+            - jsonPath: $.*.auditDetails.lastModifiedTime
+            - jsonPath: $.*.clientAuditDetails.lastModifiedBy
+            - jsonPath: $.*.clientAuditDetails.lastModifiedTime
+            - jsonPath: $.*.rowVersion
+            - jsonPath: $.*.isDeleted
+            - jsonPath: $.*.id
