--- a/egov-persister/referral-management-persister.yml
+++ b/egov-persister/referral-management-persister.yml
@@ -162,7 +162,7 @@ serviceMaps:
       fromTopic: save-hfreferral-topic
       isTransaction: true
       queryMaps:
-        - query: INSERT INTO health.hf_referral(id, clientReferenceId, tenantId, projectid, facilityid, symptom, symptomsurveyid, beneficiaryid, referralcode, nationallevelid, additionalDetails, createdBy, createdTime, lastModifiedBy, lastModifiedTime, clientCreatedBy, clientCreatedTime, clientLastModifiedBy, clientLastModifiedTime, rowVersion, isDeleted) VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+        - query: INSERT INTO hf_referral(id, clientReferenceId, tenantId, projectid, facilityid, symptom, symptomsurveyid, beneficiaryid, referralcode, nationallevelid, additionalDetails, createdBy, createdTime, lastModifiedBy, lastModifiedTime, clientCreatedBy, clientCreatedTime, clientLastModifiedBy, clientLastModifiedTime, rowVersion, isDeleted) VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
           basePath: $.*
           jsonMaps:
             - jsonPath: $.*.id
@@ -194,7 +194,7 @@ serviceMaps:
       fromTopic: update-hfreferral-topic
       isTransaction: true
       queryMaps:
-        - query: UPDATE health.hf_referral SET clientReferenceId = ?, tenantId = ?, projectid = ?, facilityid = ?, symptom = ?, symptomsurveyid = ?, beneficiaryid = ?, referralcode = ?, nationallevelid = ?, additionalDetails = ?, lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ? WHERE ID = ?;
+        - query: UPDATE hf_referral SET clientReferenceId = ?, tenantId = ?, projectid = ?, facilityid = ?, symptom = ?, symptomsurveyid = ?, beneficiaryid = ?, referralcode = ?, nationallevelid = ?, additionalDetails = ?, lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ? WHERE ID = ?;
           basePath: $.*
           jsonMaps:
             - jsonPath: $.*.clientReferenceId
@@ -221,7 +221,7 @@ serviceMaps:
       fromTopic: delete-hfreferral-topic
       isTransaction: true
       queryMaps:
-        - query: UPDATE health.hf_referral SET lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ?, isDeleted = ? WHERE ID = ?;
+        - query: UPDATE hf_referral SET lastModifiedBy = ?, lastModifiedTime = ?, clientLastModifiedBy = ?, clientLastModifiedTime = ?, rowVersion = ?, isDeleted = ? WHERE ID = ?;
           basePath: $.*
           jsonMaps:
             - jsonPath: $.*.auditDetails.lastModifiedBy
