user-sync-index boundaryHierarchy config modified in indexer ymls for ng tenant

--- a/egov-indexer/project-staff-indexer.yml
+++ b/egov-indexer/project-staff-indexer.yml
@@ -29,13 +29,13 @@ ServiceMaps:
               - inJsonPath: $.lastModifiedTime
                 outJsonPath: $.Data.createdTime
               - inJsonPath: $.province
-                outJsonPath: $.Data.province
+                outJsonPath: $.Data.LGA
               - inJsonPath: $.district
-                outJsonPath: $.Data.district
+                outJsonPath: $.Data.Ward
               - inJsonPath: $.administrativeProvince
-                outJsonPath: $.Data.administrativeProvince
+                outJsonPath: $.Data.FLHF
               - inJsonPath: $.locality
-                outJsonPath: $.Data.locality
+                outJsonPath: $.Data.Community
               - inJsonPath: $.village
-                outJsonPath: $.Data.village
+                outJsonPath: $.Data.Settlement
           timeStampField: $.lastModifiedTime
