--- a/egov-indexer/stock-indexer.yml
+++ b/egov-indexer/stock-indexer.yml
@@ -18,16 +18,16 @@ ServiceMaps:
           timeStampField: $.createdTime
         - name: user-sync-index-v1
           type: users
-          id: $.id
+          id: $.id,$.tenantId,$.clientReferenceId
           isBulk: true
           jsonPath: $
           customJsonMapping:
             indexMapping: { "Data": { } }
             fieldMapping:
-              - inJsonPath: $.lastModifiedBy
-                outJsonPath: $.Data.userId
+              - inJsonPath: $.createdBy
+                outJsonPath: $.Data.syncedUserId
               - inJsonPath: $.userName
-                outJsonPath: $.Data.userName
+                outJsonPath: $.Data.syncedUserName
               - inJsonPath: $.role
                 outJsonPath: $.Data.role
               - inJsonPath: $.boundaryHierarchy
@@ -40,15 +40,28 @@ ServiceMaps:
                 outJsonPath: $.Data.syncedTimeStamp
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
+              - inJsonPath: $.taskDates
+                outJsonPath: $.Data.taskDates
+              - inJsonPath: $.syncedDate
+                outJsonPath: $.Data.syncedDate
+              - inJsonPath: $.userAddress
+                outJsonPath: $.Data.userAddress
+              - inJsonPath: $.additionalDetails
+                outJsonPath: $.Data.additionalDetails
           timeStampField: $.createdTime
 
-    - topic: save-stock-reconciliation-topic
+    - topic: transformer-producer-stock-recon-index-v1-topic
       configKey: INDEX
       indexes:
         - name: stock-reconciliation-index-v1
           type: reconciliation
-          id: $.id
+          id: $.stockReconciliation.id
           isBulk: true
-          jsonPath: $.*
-          timeStampField: $.auditDetails.createdTime
+          jsonPath: $
+          customJsonMapping:
+            indexMapping: { "Data": { } }
+            fieldMapping:
+              - inJsonPath: $
+                outJsonPath: $.Data
+          timeStampField: $.stockReconciliation.clientAuditDetails.lastModifiedTime
 
