--- a/egov-indexer/test-python-kafka.yml
+++ b/egov-indexer/test-python-kafka.yml
@@ -1,18 +1,18 @@
 ServiceMaps:
-  serviceName: project
+  serviceName: python
   version: 1.0.0
   mappings:
-    - topic: transformer-producer-bulk-project-staff-index-v1-topic
+    - topic: test-python-kafka
       configKey: INDEX
       indexes:
-        - name: project-staff-index-v1
-          type: staff
+        - name: test-python-kafka
+          type: stock
           id: $.id
           isBulk: true
           jsonPath: $
           customJsonMapping:
-            indexMapping: { "Data": {} }
+            indexMapping: { "Data": { } }
             fieldMapping:
               - inJsonPath: $
                 outJsonPath: $.Data
-          timeStampField: $.createdTime
+          timeStampField: $.time
