scheduler file changes

--- a/egov-indexer/scheduler-config.yaml
+++ b/egov-indexer/scheduler-config.yaml
@@ -1,21 +1,23 @@
+defaults:
+  frequency: '10'
 scripts:
-  - name: population_coverage_heatmap.py
+  - name: population_coverage_heatmap
     path: population_coverage_heatmap.py
-    requirementKey: populationCoverageHeatMap
+    queriesConfigKey: populationCoverageHeatMap
     frequency: '2'
     env: {}
-  - name: delivered_coverage_heatmap.py
+  - name: delivered_coverage_heatmap
     path: delivered_coverage_heatmap.py
-    requirementKey: deliveredCoverageHeatMap
+    queriesConfigKey: deliveredCoverageHeatMap
     frequency: '2'
     env: {}
-  - name: product_coverage_heatmap.py
+  - name: product_coverage_heatmap
     path: product_coverage_heatmap.py
-    requirementKey: productCoverageHeatMap
+    queriesConfigKey: productCoverageHeatMap
     frequency: '2'
     env: {}
-  - name: household_coverage_heatmap.py
+  - name: household_coverage_heatmap
     path: household_coverage_heatmap.py
-    requirementKey: householdCoverageHeatMap
+    queriesConfigKey: householdCoverageHeatMap
     frequency: '2'
     env: {}
