--- a/egov-persister/hcm-moz-impl-persister.yml
+++ b/egov-persister/hcm-moz-impl-persister.yml
@@ -285,7 +285,7 @@ serviceMaps:
       fromTopic: create-boundaryCSV-data
       isTransaction: true
       queryMaps:
-        - query: INSERT INTO eg_dhis2_boundary_csv(id, name, parent, path, children, boundaryLevel, boundary, source, campaignStartDate, campaignEndDate, objectNode, createdBy, lastModifiedBy, createdTime, lastModifiedTime) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?) ON CONFLICT (id) DO UPDATE SET name=?, parent=?, path=?, children=?, boundaryLevel=?, boundary=?, source=?, lastModifiedBy=?, lastModifiedTime=?, objectNode=?;
+        - query: INSERT INTO eg_dhis2_boundary_csv(id, name, parent, path, children, boundaryLevel, boundary, source, campaignStartDate, campaignEndDate, objectNode, createdBy, lastModifiedBy, createdTime, lastModifiedTime, area) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?) ON CONFLICT (id) DO UPDATE SET name=?, parent=?, path=?, children=?, boundaryLevel=?, boundary=?, source=?, lastModifiedBy=?, lastModifiedTime=?, objectNode=?, area=?;
           basePath: $.*
           jsonMaps:
             - jsonPath: $.*.id
@@ -320,6 +320,8 @@ serviceMaps:
 
             - jsonPath: $.*.auditDetails.lastModifiedTime
 
+            - jsonPath: $.*.area
+
             - jsonPath: $.*.name
 
             - jsonPath: $.*.parent
@@ -341,6 +343,8 @@ serviceMaps:
             - jsonPath: $.*.objectNode
               type: JSON
               dbType: JSONB
+
+            - jsonPath: $.*.area  
 
     - version: 1.0
       description: Persists HCM events into the table
