--- a/egov-indexer/project-task-indexer.yml
+++ b/egov-indexer/project-task-indexer.yml
@@ -48,4 +48,6 @@ ServiceMaps:
                 outJsonPath: $.Data.userAddress
               - inJsonPath: $.additionalDetails
                 outJsonPath: $.Data.additionalDetails
+              - inJsonPath: $.projectTypeId
+                outJsonPath: $.Data.additionalDetails.projectTypeId
           timeStampField: $.createdTime
